# Job-Search-Automation-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  01_PROJECT_CONTEXT.md  02_MVP_DEVELOPMENT_PLAN.md  03_TECHNICAL_ARCHITECTURE.md  04_DATA_MODEL_AND_SCHEMAS.md  05_LLM_AND_AUTOMATION_SPEC.md  README.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: form_answers.yaml  profile.example.yaml  profile.yaml  settings.example.yaml  settings.yaml
config_examples/: documents.yaml  form_answers.yaml  profile.yaml  settings.yaml
documents/templates/: motivation_letter_en.txt  motivation_letter_fr.txt
md_files/sprint1/: 06_ROADMAP_AND_FUTURE_FEATURES.md  README_HANDOFF.md  what_was_done_sprint1.md
md_files/sprint2/: 00_READ_ME_FIRST.md  (+7 more)
pages/: 01_dashboard.py  02_add_job.py  03_tracker.py  04_cv_matcher.py  05_motivation_letter.py  06_form_helper.py  07_company_search.py  08_settings.py
scripts/: diagnostics.py  evaluate_extraction.py
src/: __init__.py  company_search.py  constants.py  cv_matcher.py  database.py  database_backups.py  database_migrations.py  diagnostics.py  excel_exporter.py  extractor.py  form_helper.py  letter_generator.py  network.py  normalization.py  sheets_sync.py  utils.py
tests/: test_company_search.py  test_config_loading.py  test_cv_matcher.py  test_database_init.py  test_diagnostics.py  test_excel_exporter.py  test_extraction_review.py  test_extractor.py  test_generated_assets.py  test_network.py  test_sheets_sync.py  test_stage3_boundaries.py  test_stage4_database_safety.py  test_stage5_sync.py  test_stage6_extraction_evaluation.py
(+131 files in other folders)
