[project]
name = "job-search-automation-assistant"
version = "0.2.0"
description = "Local job search automation assistant for tracking applications and preparing application materials."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "streamlit>=1.35,<2",
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "PyYAML>=6.0,<7",
    "requests>=2.32,<3",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.7,<3",
    "gspread>=6.1,<7",
    "google-auth>=2.29,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "bandit[toml]>=1.7,<2",
    "pip-audit>=2.7,<3",
    "pre-commit>=4,<5",
    "types-PyYAML>=6.0,<7",
    "types-requests>=2.32,<3",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tmp",
    ".venv",
    "database",
    "exports",
    "generated",
    "logs",
    "pytest-cache-files-*",
    "pytest-temp-*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_unused_ignores = false
no_implicit_optional = true
exclude = [
    ".venv",
    "database",
    "exports",
    "generated",
    "logs",
]

[tool.bandit]
exclude_dirs = [
    ".venv",
    "database",
    "exports",
    "generated",
    "logs",
    "tests",
]
skips = ["B101"]
